--- a/toDoTask/index.html
+++ b/toDoTask/index.html
@@ -15,7 +15,7 @@
     <section>
         <h1>To do List</h1>
         <form id="TodoTask" name="ToDoTask">
-            <input type="toDoText" id="todoText" placeholder="I have to do...">
+            <input type="toDoText" id="todoText" placeholder="I have to do..." onsubmit="addToDoList()">
             <button type="button" id="Button" onclick="addToDoList()">Gem</button>
         </form>
         <ul id="toDoList">
